# hailo_nx_clip

./: CMakeLists.txt  README.md
resources/: download_videos.sh  get_files.sh  get_temp.py  nx_text_embedding.json  root_set_env.sh  run_cameras.sh
src/hailo/vms_server_plugins/clip_person_tracker/: TextImageMatcher.cpp  TextImageMatcher.hpp  detection.cpp  detection.h  device_agent.cpp  device_agent.h  engine.cpp  engine.h  exceptions.h  frame.h  geometry.h  gstreamer_pipeline.cpp  gstreamer_pipeline.hpp  hailo_clip_plugin_ini.cpp  hailo_clip_plugin_ini.h  object_detector.cpp  object_detector.h  plugin.cpp  plugin.h
